--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gl-matrix": "^2.3.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "scs3reader_addon": "file:./native_modules/scs3reader_module_addon"
   }
 }
